Forward port of 674569 from 3.5 branch: Remove date and message-id from template message, so that new message will be assigned new up-to-date ones.

BUG:146534 

svn path=/trunk/KDE/kdepim/; revision=674571